# TriCore_TC397x_cMakeNinja

./: .clang-format  .gitignore  CMakeLists.txt  justfile  readme.md
src/: common.h  versionInfo.h
src/core/: core.h
src/core/core0/: core0.c
src/core/core1/: core1.c
src/core/core2/: core2.c
src/core/core3/: core3.c
src/core/core4/: core4.c
src/core/core5/: core5.c
src/init/: board_init.c  board_init.h
support/: addPath.ps1  build.bat  clang-format-all.ps1  clean.bat  clean.ps1  export-binsrc.ps1  export-src.ps1  get_dir_list.cmake  multi_ninja.ps1  versionInfo.h.in  vswhere.ps1
support/toolchain/: tc39xx-hightec.cmake  tc39xx-tasking.cmake  tc39xx-tasking_ref.cmake
support/vscode/: launch.json.temp  vscode_settings.json.temp  vscode_tasks.json.temp
